--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -4,38 +4,88 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="ExPusherLite - a minimal, agnostic, Pusher clone for pub-sub real-time communications">
+    <meta name="author" content="Fabio Akita (C) Codeminer 42">
 
-    <title>Hello ExPusherLite!</title>
+    <title>ExPusherLite</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
 
   <body>
-    <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-            <%= if Coherence.current_user(@conn) do %>
-              <%= if @conn.assigns[:remembered] do %>
-                <li style="color: red;">!!</li>
-              <% end %>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="">Ex Pusher Lite</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <%= if Coherence.logged_in?(@conn) do %>
+            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li class="active">
+                  <%= form_for @conn, session_path(@conn, :delete), [as: :session, method: "delete", class: "navbar-form navbar-right"], fn f  -> %>
+                    <a class="btn btn-default" data-submit="parent" href="#" rel="nofollow">Sign Out</a>
+                  <% end %>
+                </li>
+              </ul>
+            </div>
+          <% else %>
+            <%= form_for @conn, session_path(@conn, :create), [as: :session, class: "navbar-form navbar-right"], fn f  -> %>
+              <div class="form-group">
+                <% login_field = Coherence.Config.login_field %>
+                <%= text_input f, login_field, placeholder: "Email", class: "form-control", required: "" %>
+              </div>
+              <div class="form-group">
+                <%= password_input f, :password, class: "form-control", required: "" %>
+                <%= error_tag f, :password %>
+              </div>
+              <button type="submit" class="btn btn-success">Sign in</button>
+            </form>
             <% end %>
-            <%= ExPusherLite.Coherence.ViewHelpers.coherence_links(@conn, :layout) %>
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
+          <% end %>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
 
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    <%= if info = get_flash(@conn, :info) do %>
+      <p class="alert alert-info" role="alert"><%= info %></p>
+    <% end %>
+    <%= if error = get_flash(@conn, :info) do %>
+      <p class="alert alert-danger" role="alert"><%= error %></p>
+    <% end %>
 
-      <main role="main">
-        <%= render @view_module, @view_template, assigns %>
-      </main>
-
+    <div class="container">
+      <%= render @view_module, @view_template, assigns %>
     </div> <!-- /container -->
+
+    <div class="container">
+      <hr />
+      <footer>
+        <p>&copy; Codeminer 42 America 2016</p>
+      </footer>
+    </div> <!-- /container -->
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script
+			  src="https://code.jquery.com/jquery-3.1.1.min.js"
+			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			  crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
