Adding minimal identification through the Application Token Anyone with the application public key will be able to start listening.

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -11,6 +11,11 @@
 <div class="container">
   <hr />
   <h2>Chat Demo - First Channels Test</h2>
+
+  <script type="text/javascript" charset="utf-8">
+    window.appToken = "<%= @application_token %>";
+  </script>
+
   <div id='message-list' class="row">
   </div>
 
