Adding initial Guardian authentication to the UserSocket. Now all channels start authenticated through the JWT.
Making it possible to send direct messages to a user through a uniquely identified channel, so private messages can be exchanged. Both from the Socket and through API.

Also adding an API endpoint /api/organizations/:slug/applications/:app_key/event/:event to be able to send messages out of the socket, from an outside source.

The producer external app must have the UserToken associated with the owner of the Application to sign the JWT and this JWT can be used by both the Socket and API authentication.

TODO: add specs to the API and Channel

--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -12,21 +12,18 @@
   <hr />
   <h2>Chat Demo - First Channels Test</h2>
 
-  <script type="text/javascript" charset="utf-8">
-    window.appToken = "<%= @application_token %>";
-  </script>
-
-  <div id='message-list' class="row">
-  </div>
+  <%= form_tag page_path(@conn, :create), method: "post" do %>
 
   <div class='row form-group'>
-    <div class='col-md-3'>
-      <input type='text' id='name' class='form-control' placeholder='Name' />
+    <div class='col-md-6'>
+      <input type='text' id='name' name='name' class='form-control' placeholder='Name' />
     </div>
-    <div class='col-md-9'>
-      <input type='text' id='message' class='form-control' placeholder='Message' />
+    <div class='col-md-6'>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </div>
   </div>
+
+  <% end %>
 
   </div>
 </div>
