--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -36,6 +36,10 @@
           <%= if Coherence.logged_in?(@conn) do %>
             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
+                <%= if @current_user.is_root do %>
+                <li><%= link "ExAdmin", to: admin_path(@conn, :dashboard) %></li>
+                <% end %>
+                <li><%= link "Your Account", to: registration_path(@conn, :show) %></li>
                 <li class="active">
                   <%= form_for @conn, session_path(@conn, :delete), [as: :session, method: "delete", class: "navbar-form navbar-right"], fn _f  -> %>
                     <a class="btn btn-default" data-submit="parent" href="#" rel="nofollow">Sign Out</a>
