--- a/web/templates/coherence/registration/show.html.eex
+++ b/web/templates/coherence/registration/show.html.eex
@@ -58,21 +58,43 @@
               <td>Application Name</td>
               <td>Application Public Token</td>
               <td>Archived At</td>
+              <td></td>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="applications">
           <%= for application <- organization.applications do %>
             <tr>
               <td><%= application.name %></td>
               <td><%= application.app_key %></td>
               <td><%= application.archived_at || "-" %></td>
+              <td>
+                <%= form_for ExPusherLite.Application.changeset(application, %{}), "/api/organizations/#{organization.slug}/applications/#{application.app_key}", [as: :application, method: :post, onsubmit: "return false;", id: "application_#{application.app_key}"], fn _f -> %>
+                <div class="form-group">
+                  <%= submit "Delete", class: "btn btn-danger", onclick: "applicationDelete('application_#{application.app_key}')" %>
+                </div>
+                <% end %>
+              </td>
             </tr>
           <% end %>
           </tbody>
         </table>
       <% end %>
+
+      <%= form_for @application, "/api/organizations/#{organization.slug}/applications", [as: :application, method: :post, onsubmit: "return false;", id: "application_form"], fn f -> %>
+        <input type="hidden" name="jwt" id="jwt" value="" />
+        <div class="form-group">
+          <%= required_label f, :name, class: "control-label" %>
+          <%= text_input f, :name, class: "form-control", required: "" %>
+          <%= error_tag f, :name %>
+        </div>
+        <div class="form-group">
+          <%= submit "Submit", class: "btn btn-primary", onclick: "applicationSubmit()" %>
+        </div>
+      <% end %>
     </div>
   </div>
 <% end %>
 
-
+<script type="text/javascript" charset="utf-8">
+  window.guardian_jwt = "<%= @guardian_jwt %>"
+</script>
