Adding SSL configuration to HAProxy and setting the example app to also connect through SSL

--- a/rails_example/app/views/layouts/application.html.erb
+++ b/rails_example/app/views/layouts/application.html.erb
@@ -12,5 +12,5 @@
     <%= yield %>
   </body>
 
-  <script src="http://<%= Rails.application.secrets.pusher_host %>/js/pusher.js"></script>
+  <script src="//<%= Rails.application.secrets.pusher_host %>/js/pusher.js"></script>
 </html>
